--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,14 @@ email-validator==2.0.0.post2
 exceptiongroup==1.1.1
 fastapi==0.95.2
 greenlet==2.0.2
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.17.2
 httptools==0.5.0
 httpx==0.24.1
 idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -41,3 +44,4 @@ uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
 websockets==11.0.3
+zipp==3.15.0
