--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,9 +4,30 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    environment:
+      name: Testing
+    env: 
+      DATABASE_HOSTNAME: ${{secretes.DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{secretes.DATABASE_PORT}}
+      DATABASE_NAME: ${{secretes.DATABASE_NAME}}
+      DATABASE_USERNAME: ${{secretes.DATABASE_USERNAME}}
+      DATABASE_PASSWORD: ${{secretes.DATABASE_PASSWORD}}
+      SECRETE_KEY: ${{secretes.SECRETE_KEY}}
+      ALGORITHM: ${{secretes.ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secretes.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
-      - name: say hi to vishal
-        run: echo "Hello Vishal" 
+      - name: install python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
+      - name: test with pytest
+        run: |
+          pip install pytest
+          pytest 
