--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -7,14 +7,14 @@ jobs:
     environment:
       name: Testing
     env: 
-      DATABASE_HOSTNAME: ${{secretes.DATABASE_HOSTNAME}}
-      DATABASE_PORT: ${{secretes.DATABASE_PORT}}
-      DATABASE_NAME: ${{secretes.DATABASE_NAME}}
-      DATABASE_USERNAME: ${{secretes.DATABASE_USERNAME}}
-      DATABASE_PASSWORD: ${{secretes.DATABASE_PASSWORD}}
-      SECRETE_KEY: ${{secretes.SECRETE_KEY}}
-      ALGORITHM: ${{secretes.ALGORITHM}}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secretes.ACCESS_TOKEN_EXPIRE_MINUTES}}
+      DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+      DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+      DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
+      DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+      SECRETE_KEY: ${{secrets.SECRETE_KEY}}
+      ALGORITHM: ${{secrets.ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
